--- a/views/authorList.ejs
+++ b/views/authorList.ejs
@@ -9,7 +9,7 @@
         <h1>Update/Delete Authors</h1>
 
         <% for (let i = 0; i < authors.length; i++) { %>
-            <a href = "/author/edit/authorId =<%=authors[i].authorId %>">
+            <a href = "/author/edit?authorId=<%=authors[i].authorId %>">
                 UPDATE</a>
             
             <a href = "/author/delete?authorId=<%=authors[i].authorId%>">
