--- a/views/editAuthor.ejs
+++ b/views/editAuthor.ejs
@@ -6,7 +6,7 @@
     </head>
 
     <body>
-        <h1>Updating AUthor Data</h1>
+        <h1>Updating Author Data</h1>
 
         <form method = "POST" action = "/author/edit">
             <input type = "hidden" name = "authorId" value = "<%=authorInfo[0].authorId%>">
@@ -14,34 +14,40 @@
             First Name:
             <input type = "text" name = "fName" value = "<%=authorInfo[0].firstName%>"><br>
 
-            <!-- CONTINUE HERE -->
             Last Name:
-            <input type = "text" name = "lName"><br>
+            <input type = "text" name = "lName" value = "<%=authorInfo[0].lastName%>"><br>
 
             Date of Birth:
-            <input type = "date" name = "birthDate"><br>
+            <input type = "date" name = "birthDate" value = "<%=authorInfo[0].dobISO%>"><br>
 
             Date of Death:
-            <input type = "date" name = "deathDate"><br>
+            <input type = "date" name = "deathDate" value = "<%=authorInfo[0].dodISO%>"><br>
 
             Sex:
-            <select name = "sex">
-                <option value = "">  </option>
-                <option value = "M">Male</option>
-                <option value = "F">Female</option>
-            </select><br>
+            <input type = "radio" name = "sex" value = "M">
+                <% if (authorInfo[0].sex == "M") { %>
+                    checked
+                <% } %>
+            > Male
+            <input type = "radio" name = "sex" value = "F">
+                <% if (authorInfo[0].sex == "F") { %>
+                    checked
+                <% } %>
+            > Female            
+
+            <br>
 
             Profession:
-            <input type = "text" name = "profession"><br>
+            <input type = "text" name = "profession" value = "<%=authorInfo[0].profession%>"><br>
 
             Country:
-            <input type = "text" name = "country"><br>
+            <input type = "text" name = "country" value = "<%=authorInfo[0].country%>""><br>
 
             Portrait (enter URL):
-            <input type = "text" name = "portrait"><br>
+            <input type = "text" name = "portrait" value = "<%=authorInfo[0].portrait%>""><br>
 
             Biography:
-            <textarea name = "biography" rows = "4" cols = "50"></textarea><br>
+            <textarea name = "biography" rows = "4" cols = "50" value = "<%=authorInfo[0].biography%>""></textarea><br>
 
             <button>Edit Author</button>
         </form>
