--- a/views/newAuthor.ejs
+++ b/views/newAuthor.ejs
@@ -23,11 +23,9 @@
             <input type = "date" name = "deathDate"><br>
 
             Sex:
-            <select name = "sex">
-                <option value = "">  </option>
-                <option value = "M">Male</option>
-                <option value = "F">Female</option>
-            </select><br>
+            <input type = "radio" name = "sex" value = "M"> Male
+            <input type = "radio" name = "sex" value = "F"> Female
+            <br>
 
             Profession:
             <input type = "text" name = "profession"><br>
