finished all steps in the instructions. Need to work on all things quote related.

--- a/views/authorList.ejs
+++ b/views/authorList.ejs
@@ -18,5 +18,9 @@
             <%=authors[i].firstName%>
             <%=authors[i].lastName%> <br>
         <% } %>
+
+        <br><br>
+        <!-- allow users to return to home page -->
+        <a href = "/">Home</a>        
     </body>
 </html>
