--- a/views/editAuthor.ejs
+++ b/views/editAuthor.ejs
@@ -51,5 +51,9 @@
 
             <button>Edit Author</button>
         </form>
+
+        <br><br>
+        <!-- allow users to return to home page -->
+        <a href = "/">Home</a>        
     </body>
 </html>
