got everything I need. Make the web page nice still.

--- a/views/newAuthor.ejs
+++ b/views/newAuthor.ejs
@@ -6,7 +6,7 @@
     </head>
 
     <body>
-        <h1>Adding a new Author</h1>
+        <h1>Adding a New Author</h1>
 
         <!-- Post data is for when data need to be stored -->
         <form method = "POST" action = "/author/new">
