--- a/views/newQuote.ejs
+++ b/views/newQuote.ejs
@@ -11,13 +11,13 @@
         <!-- Post data is for when data need to be stored -->
         <form method = "POST" action = "/quote/new">
             Quote:
-            <input type = "text" name = "quote"><br>
+            <input type = "text" name = "quote" size = "50"><br>
 
             Category:
             <input type = "text" name = "category"><br>
 
-            <!-- Number of Likes:
-            <input type = "number" name = "likes" min = "0"><br> -->
+            Number of Likes:
+            <input type = "number" name = "likes" min = "0" size = "10"><br>
 
             <button>Add Quote</button>
         </form>
