--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
-<html lang = "en">
+
+<html lang="en">
     <head>
-        <meta charset = "UTF-8">
-        <title>Quote Search</title>
+        <meta charset="UTF-8">
+        <title>CRUD Operations</title>
+
+        <link rel="stylesheet" href="/css/styles.css">
     </head>
-</html>
+
+    <body>
+        <div class="container">
