--- a/views/authorList.ejs
+++ b/views/authorList.ejs
@@ -1,26 +1,19 @@
-<!DOCTYPE html>
-<html lang = "en">
-    <head>    
-        <meta charset = "UTF-8">
-        <title>CRUD Operations</title>
-    </head>
+<%- include('partials/header') %>
 
-    <body>
-        <h1>Update/Delete Authors</h1>
+<h1>Update/Delete Authors</h1>
 
-        <% for (let i = 0; i < authors.length; i++) { %>
-            <a href = "/author/edit?authorId=<%=authors[i].authorId %>">
-                UPDATE</a>
-            
-            <a href = "/author/delete?authorId=<%=authors[i].authorId%>">
-                DELETE</a>
-            
-            <%=authors[i].firstName%>
-            <%=authors[i].lastName%> <br>
-        <% } %>
+<div class="item-list">
+    <% for (let i = 0; i < authors.length; i++) { %>
+        <div>
+            <a href="/author/edit?authorId=<%=authors[i].authorId%>">UPDATE</a>
+            <a href="/author/delete?authorId=<%=authors[i].authorId%>" class="delete">DELETE</a>
+            <%=authors[i].firstName%> <%=authors[i].lastName%>
+        </div>
+    <% } %>
+</div>
 
-        <br><br>
-        <!-- allow users to return to home page -->
-        <a href = "/">Home</a>        
-    </body>
-</html>
+<div class="footer-links">
+    <a href="/">Home</a>
+</div>
+
+<%- include('partials/footer') %>
